<resources>
    <string name="app_name">UnitConverter</string>
    <string name="length">Length</string>
    <string name="from">From</string>
    <string name="km">km</string>
    <string name="to">To</string>
    <string name="M">m</string>
    <string name="select_unit">Select Unit</string>
    <string name="convert">Convert</string>
    <string name="mass">Mass</string>
    <string name="kg">kg</string>
    <string name="g">g</string>
    <string name="data">Data</string>
    <string name="mb">MB</string>
    <string name="kb">KB</string>
    <string name="temperature">Temperature</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="speed">Speed</string>
    <string name="m_s">m/s</string>
    <string name="km_h">km/h</string>
    <string name="time">Time</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="volume">Volume</string>
    <string name="area">Area</string>
    <string name="unit_converter">Unit Converter</string>
</resources>