<?xml version="1.0" encoding="utf-8" ?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45sp"
            android:text="@string/unit_converter"
            android:textSize="30sp"
            android:textColor="#380F80"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"/>
        
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:baselineAligned="false"
            android:layout_below="@+id/title"
            android:paddingTop="15sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                        
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/area"/>
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/area"
                            android:textColor="#905B0D"
                            android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/length"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/length"
                            android:textColor="#905B0D"
                            android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/mass"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mass"
                            android:textColor="#905B0D"
                            android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_below="@+id/ll1"
            android:layout_height="135dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="#905B0D"
                            android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/temperature" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature"
                            android:textColor="#905B0D"
                            android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/vol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/volume" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volume"
                            android:textColor="#905B0D"
                            android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="274dp"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:layout_below="@+id/ll2"
            android:paddingTop="10dp"
            android:gravity="center"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/speed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="#905B0D"
                        android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/data"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data"
                            android:textColor="#905B0D"
                            android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>