<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Time">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/time"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_text"
        android:layout_below="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_from"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/from"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:textColorHint="#A1887F"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_to"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/to"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:inputType="none"
                android:textSize="24sp"
                android:enabled="false"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unit"
        android:layout_below="@id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/from_Unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp">

            <RelativeLayout
                android:id="@+id/rl_fromUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">


                <TextView
                    android:id="@+id/tv_fromUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_unit"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/to_Unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">

            <RelativeLayout
                android:id="@+id/rl_toUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_toUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_unit"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/convert_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unit"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
